# rustChip

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LEVERAGE.md  LICENSE  LICENSE-ORC  PACKAGE_MANIFEST.txt  PR_DESCRIPTION.md  QUICKSTART.md  README.md  RUST_DRIVER_README.md  TOLERANCE_REGISTRY.md  akida-pcie-core.c  deny.toml  justfile  tarpaulin.toml
.cursor/rules/: rustchip.md
.github/workflows/: ci.yml
baseCamp/: GUIDESTONE_CERTIFICATION.md  README.md  RUST_NPU_ECOSYSTEM.md  SCIENTIFIC_DEPLOYMENT.md  SNNTORCH_BRIDGE.md  ZOO_GUIDE.md
baseCamp/conversion/: README.md  from_pytorch.md  from_scratch.md  from_snntorch.md
baseCamp/models/custom/: esn_stub.md  minimal_fc.md
baseCamp/models/edge/: akidanet.md  chaotic_esn.md  ds_cnn_kws.md  dvs_gesture.md  ecg_anomaly.md
baseCamp/models/edge/beyond_sdk/: akidanet_beyond.md  detection_beyond.md  dvs_beyond.md  ecg_beyond.md  kws_beyond.md
baseCamp/models/physics/: anderson_classifier.md  esn_readout.md  phase_classifier.md  transport_predictor.md
baseCamp/preserve/: README.md  audio.md  biology.md  environmental.md  genomic.md  industrial.md  physics.md  vision.md
baseCamp/spring-profiles/: README.md
baseCamp/systems/: README.md  adaptive_sentinel.md  chaotic_attractor.md  hw_sw_comparison.md  hybrid_executor.md  multi_tenancy.md  neuromorphic_pde.md  npu_conductor.md  online_evolution.md  physics_surrogate.md  sovereign_boot.md  temporal_puf.md
baseCamp/zoo-artifacts/: .gitignore  physics_manifest.json  zoo_manifest.json
baseCamp/zoos/: brainchip_metatf.md  neurobench.md  snntorch.md  third_party.md
crates/akida-bench/: Cargo.toml
crates/akida-bench/src/: lib.rs  preserve.rs
crates/akida-chip/: Cargo.toml
crates/akida-chip/src/: bar.rs  lib.rs  mesh.rs  pcie.rs  program.rs  regs.rs  sram.rs
crates/akida-cli/: Cargo.toml
crates/akida-cli/src/: main.rs
crates/akida-driver/: Cargo.toml
crates/akida-driver/examples/: basic_io.rs  device_info.rs  enumerate_devices.rs  setup_npu.rs  vfio_bind.rs
crates/akida-driver/src/: backend.rs  capabilities.rs  device.rs  discovery.rs  error.rs  evolution.rs  hybrid.rs  inference.rs  io.rs  lib.rs  loading.rs  mmio.rs  puf.rs  sentinel.rs  setup.rs  sram.rs  synthetic.rs  tenancy.rs
crates/akida-driver/src/backends/: kernel.rs  mmap.rs  mod.rs  software.rs  userspace.rs
crates/akida-driver/src/glowplug/: lifecycle.rs  mod.rs  sovereign.rs  swap.rs  sysfs.rs
crates/akida-driver/src/hybrid/: hardware.rs  mod.rs  software.rs
crates/akida-driver/src/vfio/: container.rs  dma.rs  ioctls.rs  mod.rs
crates/akida-driver/tests/: backend_parity.rs  backend_tests.rs  esn_determinism.rs
crates/akida-models/: Cargo.toml
crates/akida-models/examples/: benchmark_inference.rs  benchmark_loading.rs  benchmark_parser.rs  load_to_device.rs  parse_fbz.rs  program_external.rs  run_inference.rs
crates/akida-models/schemas/: akida_model.fbs
crates/akida-models/src/: builder.rs  error.rs  guidestone.rs  inference.rs  lib.rs  loading.rs  model.rs  parser.rs  quantize.rs  schema.rs  schema_parser.rs  shapes.rs  weights.rs  zoo.rs
crates/akida-models/src/import/: mod.rs  onnx.rs
crates/akida-models/tests/: parser_roundtrip.rs  zoo_regression.rs
docs/: BENCHMARK_DATASHEET.md  BEYOND_SDK.md  DEPRECATED.md  EMBER_INTEGRATION.md  EXPLORATION.md  HARDWARE.md  PR_DESCRIPTION.md  SRAM_ACCESS_GUIDE.md  TECHNICAL_BRIEF.md
metalForge/: README.md
metalForge/experiments/: 001_BASELINE_CHARACTERIZATION.md  002_MULTI_TENANCY.md  003_BEYOND_CLAIMED.md  004_HYBRID_TANH.md  005_WILDLIFE_BASELINE.md  006_REGISTER_PROBE.md
metalForge/npu/akida/: HARDWARE_PROFILE.md  README.md  REGISTER_PROBE_LOG.md
metalForge/npu/akida/benchmarks/: README.md  exp001_baseline.md
scripts/: bind-akida-vfio.sh  convert_model.py  export_physics.py  export_zoo.py  generate_test_input.py
specs/: AI_CONTEXT.md  DRIVER_SPEC.md  EVOLUTION.md  GUIDESTONE.md  INTEGRATION_GUIDE.md  PHASE_ROADMAP.md  README.md  SILICON_SPEC.md
src/: CMakeLists.txt  inference.cpp  inference.h  main.cpp  system_linux.cpp
test/: README.md
whitePaper/: README.md
whitePaper/explorations/: GPU_NPU_PCIE.md  NPU_FRONTIERS.md  NPU_ON_GPU_DIE.md  RUST_AT_SILICON.md  SPRINGS_ON_SILICON.md  TANH_CONSTRAINT.md  WHY_NPU.md
whitePaper/outreach/akida/: BENCHMARK_DATASHEET.md  TECHNICAL_BRIEF.md
